main animations done pushing to show Dorian

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
+    "luxy.js": "^0.1.0",
     "split-type": "^0.3.4"
   }
 }
